# fish-schooling

./: .clang-tidy  .gitignore  CMakeLists.txt  ProjectOptions.cmake  README.md  config.yaml  create_movie.sh
.github/: test.yaml
.github/workflows/: test.yaml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake  Utility.cmake
include/: coordinate.hpp  eom.hpp  fish.hpp  io.hpp  simulation.hpp
src/: CMakeLists.txt  config.yaml  coordinate.cpp  eom.cpp  fish.cpp  io.cpp  main.cpp
test/: CMakeLists.txt  boundary_test.cpp  eom_test.cpp  fish_test.cpp  inner_test.cpp  io_test.cpp  vector_test.cpp
